# ik-geo-cpp

./: CMakeLists.txt
example/: CMakeLists.txt
example/src/: main.cpp
include/: ik_geo.h
rust-wrapper/: Cargo.toml
rust-wrapper/src/: lib.rs
